V1.2 add on: Fix font and symbols on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,8 @@
 
 /* ----- VARIABLES ----- */
 :root {
+
+    font-family:'Times New Roman', Times, serif;
     --normalFontSize: 24px;
   
     --bgColor: #fef6ec;
@@ -572,7 +574,6 @@ button.prev:hover, button.next:hover {
     color: inherit;
     border-radius: 10px;
 }
-
 
 .contactDark:Hover{
     color: #e6ccb2;
